# Anonpic

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
config/: app.cfg
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: app.cfg
src-tauri/icons/: icon.icns
src/core/: mod.rs
src/core/base/: mod.rs
src/core/base/configs/: config_master.rs  mod.rs
src/core/base/notify/: mod.rs  notifications_handler.rs
src/core/base/saves/: mod.rs  user_saves.rs
src/core/base/screen_grab/: free_roam_screen_grab.rs  mod.rs
src/core/helpers/: mod.rs
src/core/helpers/file_data_operations/: metadata.rs  mod.rs  xif_data.rs
src/core/helpers/file_operations/: file_helper.rs
src/core/helpers/graphics/: screen_capture.rs
src/core/helpers/windows_actual_windows_help/: mod.rs  windows_helper.rs
src/core/helpers/windows_api_helper/: mod.rs
src/core/logic/events/: listener.rs
ui/: index.html
ui/src/: main.js  styles.css
